# wordavl

./: .gitignore  .pre-commit-config.yaml  cli.py  pyproject.toml  readme.md  webserver.py
tests/: text_data_test.py
wordavl/: __init__.py  core.py  text_data.py  word_list.py  wordavl.py
wordavl/structures/: avl.py
