[tool.poetry]
name = "wordavl"
version = "0.1.0"
description = "An autocomplete/recommendation system implemented using an AVL datastructure"
authors = ["João Cabral <jpfcabral@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
loguru = "^0.7.2"
typer = "^0.10.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pre-commit = "^3.6.2"
pytest-cov = "^4.1.0"
streamlit = "^1.32.2"
seaborn = "^0.13.2"
matplotlib = "^3.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
